--- a/slotmachine.html
+++ b/slotmachine.html
@@ -128,11 +128,17 @@ h1 span {
   opacity: 1;
 }
 
+button {
+  background-color: white;
+  color: black;
+  font-size: 14px;
+}
+
 </style>
 
 <div id="root"></div>
 <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<script type="text/babel" src="https://idamayer.com/slotmachine.js"></script>
+<script src="slotmachine.js"></script>
 
